JS menu btn addition

--- a/DIR/index.html
+++ b/DIR/index.html
@@ -15,9 +15,9 @@
     <div class="overlay"></div>
     <header>
         <div class="menu-btn">
-            <div class="btn-lin"></div>
-            <div class="btn-lin"></div>
-            <div class="btn-lin"></div>
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
+            <div class="btn-line"></div>
         </div>
    
     <nav class="menu">
