--- a/DIR/index.html
+++ b/DIR/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2|Muli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/0975e97bf5.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
@@ -25,7 +26,7 @@
             <div class="profile"></div>
         </div>
         <ul class="menu-nav">
-            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link current">Home</a></li>
             <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
             <li class="nav-item"><a href="projects.html" class="nav-link">Projects</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -42,7 +43,9 @@
     <a href="http://"><i class="fab fa-linkedin fa-3x"></i></a>
     </div>
 </main>
-
+<footer id="main-footer">
+    &copy; 2020 Carlston G. All rights reserved. 
+   </footer>
  <script src="js/main.js"></script>
 </body>
 </html>
