Added Projects Page and Media Query

--- a/DIR/projects.html
+++ b/DIR/projects.html
@@ -45,34 +45,55 @@
         </nav>
     </header>
 <!--footer contact side below-->
-    <main id="about">
-    <h1 class="lg-header"><span class="secondary-text">About</span> <span class="Tri-text">Me</span></h1>
-    <h2 class="sm-header">Web Developer, Indie Game Creative & Content Writer.</h2>
-    <div class="about-info">
-   <img src="img/profile.png" alt="Carlston G." class="bio-image">
-   <div class="bio">
-    <h3 class="text-secondary">BIO</h3>
-    <p>Carlston Grefalde has been creating diverse and attention-catching websites for a variety of clients. He is an IT graduate in the field of computer networks and security. He went into the field of web and game development in 2018 and considered himself, a self-thought developer. He cares deeply about creating world-class, useful, responsive, Scalable and beautiful products that help people and make a difference.</p>
+    <main id="work">
+    <h1 class="lg-header"><span class="secondary-text">My</span> <span class="Tri-text">Projects</span></h1>
+    <h2 class="sm-header">Here are some of my work and personal projects.</h2>
+    <div class="Projects">
+        <div class="item">
+        <a href="http://">
+      <img src="projects/project1.PNG" alt="Project">
+        </a>
+        <a href="" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+        </a>
+    </div>
+    <div class="item">
+        <a href="http://">
+      <img src="projects/project1.PNG" alt="Project">
+        </a>
+        <a href="" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+        </a>
+    </div>
+    <div class="item">
+        <a href="http://">
+      <img src="projects/project1.PNG" alt="Project">
+        </a>
+        <a href="" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+        </a>
+    </div>
+    <div class="item">
+        <a href="http://">
+      <img src="projects/project1.PNG" alt="Project">
+        </a>
+        <a href="" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+        </a>
+    </div>
 </div>
-    <div class="job job-1">
-        <h3>E-commerce and Website Support</h3>
-        <h6>Front-End</h6>
-        <p>Promotion and discount code tools, Search engine optimized code and layout. Edit template to make them more suitable with the target market</p>
-    </div>
-    <div class="job job-2">
-        <h3>Full Stack Developer</h3>
-        <h6>UI and Databased Management</h6>
-        <p>Create UI designs and database management support for desktop applications. Managing and maintaining database management</p>
-    </div>
-    <div class="job job-3">
-        <h3>Indie Game Developer</h3>
-        <h6>Full Stack and QA debugging</h6>
-        <p>This skill is more on a hobby. Using C# and unity game engine to create and design platformer games. Has also done extensive QA and debugging support for mobile games</p>
-    </div>
-    
-  
-</div>
-
     </main>
 
 
