Initial Portfolio Finish

--- a/DIR/contacts.html
+++ b/DIR/contacts.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Sen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Sen&display=swap" rel="stylesheet">
-    <title>Projects</title>
+    <title>Contacts</title>
 </head>
 <!--Main body-->
 <body>
@@ -38,62 +38,28 @@
                         Projects</a>
                     </li>
                     <li class="nav-items">
-                        <a href="contacts.html" class="nav-link">
+                        <a href="contacts.html" class="nav-link current">
                         My Contacts</a>
                     </li>
             </ul>
         </nav>
     </header>
 <!--footer contact side below-->
-    <main id="work">
-    <h1 class="lg-header"><span class="secondary-text">My</span> <span class="Tri-text">Projects</span></h1>
-    <h2 class="sm-header">Here are some of my work and personal projects.</h2>
-    <div class="Projects">
-        <div class="item">
-        <a href="http://">
-      <img src="projects/project1.PNG" alt="Project">
-        </a>
-        <a href="https://dealsontech.net/" target="_blank" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-        </a>
-        <a href="#" onClick="alert('Sorry source code for this project is confidential due to an active NDA');" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-        </a>
+    <main id="contacts">
+    <h1 class="lg-header"><span class="secondary-text">Contact</span> <span class="Tri-text">Me</span></h1>
+    <h2 class="sm-header">Web Developer, Indie Game Creative & Content Writer.</h2>
+    <div class="mycontact">
+        <div>
+            <span class="secondary-text">Email: </span>Carlstongrefalde@gmail.com
+        </div>
+        <div>
+            <span class="secondary-text">Phone: </span>PH +639656070341
+        </div>
+        <div>
+            <span class="secondary-text">Address: </span>Dumaguete City, NOR 6200, Philippines
+        </div>
     </div>
-    <div class="item">
-        <a href="http://">
-      <img src="projects/project1.PNG" alt="Project">
-        </a>
-        <a href="" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-        </a>
-        <a href="" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-        </a>
-    </div>
-    <div class="item">
-        <a href="http://">
-      <img src="projects/project1.PNG" alt="Project">
-        </a>
-        <a href="" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-        </a>
-        <a href="" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-        </a>
-    </div>
-    <div class="item">
-        <a href="http://">
-      <img src="projects/project1.PNG" alt="Project">
-        </a>
-        <a href="" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-        </a>
-        <a href="" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-        </a>
-    </div>
-</div>
+
     </main>
 
 
