--- a/DIR/index.html
+++ b/DIR/index.html
@@ -29,7 +29,7 @@
             <li class="nav-item"><a href="index.html" class="nav-link current">Home</a></li>
             <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
             <li class="nav-item"><a href="projects.html" class="nav-link">Projects</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="contacts.html" class="nav-link">Contact</a></li>
         </ul>
     </nav>
 </header>
