--- a/DIR/index.html
+++ b/DIR/index.html
@@ -37,10 +37,10 @@
  <h1 class="lg-header"><span class="secondary-text">Carlston</span> Grefalde</h1>
  <h2 class="sm-header">Web Developer, Indie Game Creative & Content Writer.</h2>
 <div class="icons">
-    <a href="http://">
+    <a href="https://github.com/CarlstonG" target="_blank">
     <i class="fab fa-github fa-3x"></i></a>
-    <a href="http://"><i class="fab fa-youtube fa-3x"></i></a>
-    <a href="http://"><i class="fab fa-linkedin fa-3x"></i></a>
+    <a href="https://www.youtube.com/channel/UC0avD7tJ8WPpyD_yC3cuYtA?view_as=subscriber" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
+    <a href="https://bit.ly/2Rb0C7U" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
     </div>
 </main>
 <footer id="main-footer">
