--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 </main>
 <footer id="main-footer">
     &copy; 2020 Carlston G. All rights reserved. 
-   </footer>
+</div>
+       </footer>
  <script src="js/main.js"></script>
 </body>
 </html>
