--- a/projects.html
+++ b/projects.html
@@ -62,12 +62,12 @@
     </div>
     <div class="item">
         <a href="http://">
-      <img src="projects/project1.PNG" alt="Project">
+      <img src="projects/landingpage.PNG" alt="Project">
         </a>
-        <a href="" class="btn-light">
+        <a href="https://carlstong.github.io/Projects/index.html" target="_blank" class="btn-light">
             <i class="fas fa-eye"></i> Project
         </a>
-        <a href="" class="btn-dark">
+        <a href="https://github.com/CarlstonG/Projects" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
         </a>
     </div>
