Image on projects edit

--- a/DIR/projects.html
+++ b/DIR/projects.html
@@ -50,7 +50,7 @@
     <h2 class="sm-header">Here are some of my work and personal projects.</h2>
     <div class="Projects">
         <div class="item">
-        <a href="http://">
+        <a href="https://dealsontech.net/" target="_blank">
       <img src="projects/project1.PNG" alt="Project">
         </a>
         <a href="https://dealsontech.net/" target="_blank" class="btn-light">
@@ -61,7 +61,7 @@
         </a>
     </div>
     <div class="item">
-        <a href="http://">
+        <a href="https://carlstong.github.io/Projects/index.html" target="_blank">
       <img src="projects/landingpage.PNG" alt="Project">
         </a>
         <a href="https://carlstong.github.io/Projects/index.html" target="_blank" class="btn-light">
