--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Sen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Sen&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
     <title>Projects</title>
 </head>
 <!--Main body-->
@@ -59,6 +60,7 @@
         <a href="#" onClick="alert('Sorry source code for this project is confidential due to an active NDA');" class="btn-dark">
             <i class="fab fa-github"></i> Github
         </a>
+        <button class="btnn">HTML5, CSS3, SHOPIFY-API, JS</button>
     </div>
     <div class="item">
         <a href="https://carlstong.github.io/Projects/index.html" target="_blank">
@@ -68,6 +70,52 @@
             <i class="fas fa-eye"></i> Project
         </a>
         <a href="https://github.com/CarlstonG/Projects" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+        </a>
+        <button class="btnn">HTML5, CSS3, SASS, JS</button>
+    </div>
+    <div class="item">
+        <a href="https://carlstong.github.io/JS_PassGen" target="_blank">
+      <img src="projects/project3.PNG" alt="Project">
+        </a>
+        <a href="https://carlstong.github.io/JS_PassGen/" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="https://github.com/CarlstonG/JS_PassGen" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+        </a>
+        <button class="btnn">HTML5, CSS3, JS</button>
+    </div>
+    <div class="item">
+        <a href="http://">
+      <img src="projects/project1.PNG" alt="Project">
+        </a>
+        <a href="" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+        </a>
+    </div>
+    <div class="item">
+        <a href="http://">
+      <img src="projects/project1.PNG" alt="Project">
+        </a>
+        <a href="" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+        </a>
+    </div>
+    <div class="item">
+        <a href="http://">
+      <img src="projects/project1.PNG" alt="Project">
+        </a>
+        <a href="" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="" class="btn-dark">
             <i class="fab fa-github"></i> Github
         </a>
     </div>
