--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
     <h1 class="lg-header"><span class="secondary-text">My</span> <span class="Tri-text">Projects</span></h1>
     <h2 class="sm-header">Here are some of my work and personal projects.</h2>
     <div class="Projects">
+        <!--Dealsontech Project-->
         <div class="item">
         <a href="https://dealsontech.net/" target="_blank">
       <img src="projects/project1.PNG" alt="Project">
@@ -60,8 +61,22 @@
         <a href="#" onClick="alert('Sorry source code for this project is confidential due to an active NDA');" class="btn-dark">
             <i class="fab fa-github"></i> Github
         </a>
-        <button class="btnn">HTML5, CSS3, SHOPIFY-API, JS</button>
+        <button class="btnn">HTML5, CSS3, SHOPIFY-LIQUIDE, JS</button>
     </div>
+    <!--Personal Project landing page-->
+    <div class="item">
+        <a href="https://carlstong.github.io/Social--O/" target="_blank">
+      <img src="projects/Social-O.PNG" alt="Project">
+        </a>
+        <a href="https://carlstong.github.io/Social--O/" target="_blank" class="btn-light">
+            <i class="fas fa-eye"></i> Project
+        </a>
+        <a href="https://github.com/CarlstonG/Social--O" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+        </a>
+        <button class="btnn">HTML5, CSS3, SASS, JS</button>
+    </div>
+     <!--Personal Project landing page-->
     <div class="item">
         <a href="https://carlstong.github.io/Projects/index.html" target="_blank">
       <img src="projects/landingpage.PNG" alt="Project">
@@ -74,6 +89,7 @@
         </a>
         <button class="btnn">HTML5, CSS3, SASS, JS</button>
     </div>
+     <!--Vanilla JS -->
     <div class="item">
         <a href="https://carlstong.github.io/JS_PassGen" target="_blank">
       <img src="projects/project3.PNG" alt="Project">
@@ -86,27 +102,31 @@
         </a>
         <button class="btnn">HTML5, CSS3, JS</button>
     </div>
+     <!--REACT PROJECTS-->
     <div class="item">
-        <a href="http://">
-      <img src="projects/project1.PNG" alt="Project">
+        <a href="https://carlstong.github.io/my_todo/"  target="_blank">
+      <img src="projects/React-todo.PNG" alt="Project">
         </a>
-        <a href="" class="btn-light">
+        <a href="https://carlstong.github.io/my_todo/" class="btn-light" target="_blank">
             <i class="fas fa-eye"></i> Project
         </a>
-        <a href="" class="btn-dark">
+        <a href="https://github.com/CarlstonG/my_todo" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
         </a>
+        <button class="btnn">REACT, HTML5, CSS3, JS</button>
     </div>
+    <!--Electron Project-->
     <div class="item">
-        <a href="http://">
-      <img src="projects/project1.PNG" alt="Project">
+        <a href="https://github.com/CarlstonG/My_Lister" target="_blank">
+      <img src="projects/Lister-Electron.PNG" alt="Project">
         </a>
-        <a href="" class="btn-light">
-            <i class="fas fa-eye"></i> Project
+        <a href="https://www.dropbox.com/s/tttijanjrnvpiui/My%20Lister.rar?raw=1" target="_blank" class="btn-light">
+            <i class="fas fa-eye"></i> Download-DROPBOX
         </a>
-        <a href="" class="btn-dark">
+        <a href="https://github.com/CarlstonG/My_Lister" target="_blank" class="btn-dark">
             <i class="fab fa-github"></i> Github
         </a>
+        <button class="btnn">ELECTRON APP DEVELOPMENT</button>
     </div>
     <div class="item">
         <a href="http://">
